# subtitle_maker

./: .dockerignore  .env.example  .gitignore  README.md  README_ZH.md  cli.py  pyproject.toml  retime_subtitle.py
backend/: __init__.py  demucs_worker.py  env_loader.py  media_tools.py  srt_maker.py  subtitle_pipeline.py  subtitle_retimer.py  timing_aligner.py  video_processor.py
skills/movie-audio-subtitle-fix/: .gitignore  README.md  SKILL.md
skills/movie-audio-subtitle-fix/agents/: openai.yaml
skills/movie-audio-subtitle-fix/scripts/: _skill_paths.py  faster_whisper_english_ass.py  fix_movie_audio.py  generate_and_retime_subtitles.py  md_transcript_to_ass.py  order_only_retime_ass.py  prepare_english_subtitle_source.py  translate_ass_preserve_timing.py
